refatorado todo o codigo