@@ -1,11 +1,10 @@
 package io.github.jafc.jafcportfolio.infrastructure.utils.modelmapper;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+
+import java.util.List;
+import java.util.Objects;
 
 @Service
 public class ModelMapperService {
@@ -27,6 +26,6 @@ public class ModelMapperService {
     public <S, T> List<T> convertList(List<S> origin, Class<T> target) {
         return origin.stream()
         .map(element -> convert(element, target))
-        .collect(Collectors.toList());
+        .toList();
     }
 }
